--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Mario2D</string>
-    <string name="game_title">Mario Bros</string>
+    <string name="game_title">Mario 2D</string>
     <string name="world">World : </string>
     <string name="time">Time : </string>
     <string name="world1">World : Prairie</string>
@@ -8,6 +8,5 @@
     <string name="world3">World : Volcano</string>
     <string name="world4">World : 4</string>
     <string name="world5">World : 5</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
